--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
